objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_flag_User_register__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin flag User register</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_flag_training_is_closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin flag training is closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_of_Feedback_Invite_Mail__c</fullName>
        <inlineHelpText>You can add max of 255 characters  into the body of  standard email template.Going to sent to participants.</inlineHelpText>
        <label>Body of Feedback Invite Mail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Body_of_Invite_Participant_Mail__c</fullName>
        <inlineHelpText>You can add max of 255 characters  into the body of  standard email template.Going to sent to participants.</inlineHelpText>
        <label>Body of Invite Participant Mail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Body_of_Outlook_Invite_Mail__c</fullName>
        <label>Body of Outlook Calender Invite</label>
        <length>32200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancel_Slot_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Slot 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Slot_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Slot 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancel_Slot_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel Slot 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Training__c</fullName>
        <label>Last Date of Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Training__c</fullName>
        <label>Description of Training</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duration_of_Exam_in_Minutes__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>Please enter the Exam duration in minutes.</inlineHelpText>
        <label>Duration of Exam in Minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_of_Training__c</fullName>
        <description>A returned calculation value of 2.25 represents 2 days and 6 hours.
     .25 * 1440 (the number of minutes in a 24 hour period) = 360 minutes
     360/60 minutes = 6 hours
1/2 hours=0.02083333
1 hour=0.04166667
1.5 hours=0.0625
2 hours=0.08333333
2.5 hours= 0.1041667
---------------------------------------------------------------------------------------------------------
7 * 60 minutes = 420 minutes
     420/1440 minutes in a 24 hour period = 0.2916</description>
        <label>Duration of Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5 Hour</fullName>
                </value>
                <value>
                    <fullName>1 Hour</fullName>
                    <default>true</default>
                    <label>1 Hour</label>
                </value>
                <value>
                    <fullName>1.5 Hours</fullName>
                </value>
                <value>
                    <fullName>2 Hours</fullName>
                </value>
                <value>
                    <fullName>2.5 Hours</fullName>
                </value>
                <value>
                    <fullName>3 Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_of_Trainner__c</fullName>
        <label>Email of Trainer</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndTraining_Date_and_Time1__c</fullName>
        <formula>IF( ISBLANK( Training_Date_and_Time1__c),Training_Date_and_Time1__c, Training_Date_and_Time1__c +( IF( ISPICKVAL( Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL(Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndTraining Date and Time1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndTraining_Date_and_Time2__c</fullName>
        <formula>IF( ISBLANK( Training_Date_and_Time2__c),Training_Date_and_Time2__c, Training_Date_and_Time2__c +( IF( ISPICKVAL( Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL(Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndTraining Date and Time2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EndTraining_Date_and_Time3__c</fullName>
        <formula>IF( ISBLANK( Training_Date_and_Time3__c),Training_Date_and_Time3__c, Training_Date_and_Time3__c +( IF( ISPICKVAL( Duration_of_Training__c ,&apos;0.5 Hour&apos;) ,0.02083333, IF( ISPICKVAL(Duration_of_Training__c ,&apos;1 Hour&apos;) ,0.04166667, IF( ISPICKVAL( Duration_of_Training__c ,&apos;1.5 Hours&apos;) ,0.0625,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2 Hours&apos;) ,0.08333333,IF( ISPICKVAL( Duration_of_Training__c ,&apos;2.5 Hours&apos;) ,0.1041667,IF( ISPICKVAL( Duration_of_Training__c ,&apos;3 Hours&apos;) ,0.125,0.04166667))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndTraining Date and Time3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exam_URL__c</fullName>
        <formula>&apos;https://c2s.my.salesforce.com/apex/IND_Training_PageReferenceLanding_Page?id=&apos;+Id</formula>
        <label>Exam URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_1__c</fullName>
        <label>Feedback Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_2__c</fullName>
        <label>Feedback Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Question_3__c</fullName>
        <label>Feedback Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_Training__c</fullName>
        <label>Location of Training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lync_Conference_ID__c</fullName>
        <inlineHelpText>Enter your Lync Conference ID</inlineHelpText>
        <label>Lync Conference ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Trainer__c</fullName>
        <label>Name of the Trainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Invites_Reg_but_not_attended__c</fullName>
        <label>No. of Invites Reg but not Attended</label>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.Status_of_Participant__c</field>
            <operation>equals</operation>
            <value>Signed for Training</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Response_Result__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Invites_Attended_Training__c</fullName>
        <label>Number of Invites Attended Training</label>
        <summaryFilterItems>
            <field>Learning_Response_Result__c.Status_of_Participant__c</field>
            <operation>equals</operation>
            <value>Attended Training,Taken Exam (Passed), Taken Exam (Failed), Feedback Requested, Feedback Received</value>
        </summaryFilterItems>
        <summaryForeignKey>Learning_Response_Result__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Invites__c</fullName>
        <label>Number of Invites</label>
        <summaryForeignKey>Learning_Response_Result__c.Training__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Points_If_user_Attended__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Number of Points If user Attended</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Points_for_Exam_Participation__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Number of Points for Exam Participation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Points_for_Exam_Passed__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Number of Points for Exam Passed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Points_for_giving_Feedback__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Number of Points for giving Feedback</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Participants_Feedback_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Participants Feedback Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Participants_an_Invite_Mail__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Participants an Invite Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShortDescription_of_the_URL1__c</fullName>
        <label>Short Description of the URL1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription_of_the_URL2__c</fullName>
        <label>Short Description of the URL2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShortDescription_of_the_URL3__c</fullName>
        <label>Short Description of the URL3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_1_Outlook_UID__c</fullName>
        <label>Slot 1  Outlook UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_2_Outlook_UID__c</fullName>
        <label>Slot 2 Outlook UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slot_3_Outlook_UID__c</fullName>
        <label>Slot 3 Outlook UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Date_and_Time1__c</fullName>
        <label>Training Date and Time1</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Date_and_Time2__c</fullName>
        <label>Training Date and Time2</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Date_and_Time3__c</fullName>
        <label>Training Date and Time3</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Training_Room_URL__c</fullName>
        <label>Training Room URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Slide_URL2__c</fullName>
        <label>Training Slide URL2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Slide_URL3__c</fullName>
        <label>Training Slide URL3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Slide_URl1__c</fullName>
        <label>Training Slide URl1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_by_Slides__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training by Slides</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Training__c</fullName>
        <label>Type of Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Product Training Incentive Program</fullName>
                </value>
                <value>
                    <fullName>Process Training</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com Process Training</fullName>
                </value>
                <value>
                    <fullName>Methodology Training</fullName>
                </value>
                <value>
                    <fullName>Salesforce.com Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_of_Attendence_from_Slide__c</fullName>
        <formula>&apos;https://c2s.my.salesforce.com/apex/IND_Training_PageReferenceLanding_Page?id=&apos;+Id</formula>
        <label>URL of Attendence from Slide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Selected_Date_Time_Option_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Selected Date/Time Option 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Selected_Date_Time_Option_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Selected Date/Time Option 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Selected_Date_Time_Option_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Selected Date/Time Option 3</label>
        <type>Checkbox</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>Active_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Trainings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Training_Date_and_Time1__c</columns>
        <columns>Training_Date_and_Time2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Trainings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Older_Active_Training</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Date_of_Training__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Older Active Training</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_of_Training__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Upcoming Trainings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <recordTypes>
        <fullName>Training_with_Response_Date_Slots</fullName>
        <active>true</active>
        <description>The training is offered at different time slots either online or face to face. No exam is required. Feedback can be requested.</description>
        <label>Training with Response &amp; Date Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_with_Response_Exam_Date_Slots</fullName>
        <active>true</active>
        <description>The training is offered at different time slots either online or face to face. An Exam is required. Feedback can be requested.</description>
        <label>Training with Response, Exam &amp; Date Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_with_Response_Exam_without_Date_Slots</fullName>
        <active>true</active>
        <description>The training is offered only via presentation or video material. An exam is required. Feedback can be requested.</description>
        <label>Training with Response &amp; Exam without Date Slots</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training_with_Response_without_Date_Slots</fullName>
        <active>true</active>
        <description>The training is offered only via presentation or video material. Exam is not required. Feedback can be requested.</description>
        <label>Training with Response without Date Slots</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Clender_invite_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName==&apos;Training_with_Response_Date_Slots&apos; || RecordType.DeveloperName==&apos;Training_with_Response_Exam_Date_Slots&apos;, OR( ISBLANK( Email_of_Trainner__c ),ISBLANK( Location_of_Training__c ),ISBLANK(  Training_Room_URL__c )),false)</errorConditionFormula>
        <errorMessage>Please add an appropriate value to Location of Training, Email of Trainer, Training Room URL. These values are needed to generate the calender request to the user.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Slot_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( RecordType.DeveloperName==&apos;Training_with_Response_Date_Slots&apos; || RecordType.DeveloperName==&apos;Training_with_Response_Exam_Date_Slots&apos; ,  AND( ISBLANK( Training_Date_and_Time1__c ) ,ISBLANK( Training_Date_and_Time2__c ),ISBLANK( Training_Date_and_Time4__c ),ISBLANK( Training_Date_and_Time3__c ),ISBLANK( Training_Date_and_Time5__c ),ISBLANK( Training_Date_and_Time6__c )) , False)</errorConditionFormula>
        <errorMessage>Please add at lest one Training Date Slot
     OR     
You can not cancel all the slots in one shot. At least one slot must be available for training.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Training_URL_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Training_by_Slides__c==True, AND( ISBLANK(  Training_Slide_URl1__c ) ,ISBLANK(  Training_Slide_URL2__c  ),ISBLANK(  Training_Slide_URL3__c  )) , False)</errorConditionFormula>
        <errorMessage>Please Enter at least one Training Slide URL.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_for_Correct_Training_Slot</fullName>
        <active>true</active>
        <errorConditionFormula>OR(IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time1__c), true, false),IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time2__c), true, false),IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time3__c), true, false),IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time4__c), true, false),IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time5__c), true, false),IF(Date_of_Training__c&lt;DATEVALUE(Training_Date_and_Time6__c), true, false))</errorConditionFormula>
        <errorMessage>Please select the appropriate training slot.</errorMessage>
    </validationRules>
</CustomObject>